<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:scrollbars="none">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_app" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/sign_up_icon"
            android:src="@drawable/icon_sign_up" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/sign_up"
            android:textColor="?attr/text_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_curved_bordered_box"
                android:contentDescription="@string/google_login"
                android:paddingStart="30dp"
                android:paddingTop="15dp"
                android:paddingEnd="30dp"
                android:paddingBottom="15dp"
                android:src="@drawable/ic_google" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_curved_bordered_box"
                android:contentDescription="@string/facebook_login"
                android:paddingStart="30dp"
                android:paddingTop="15dp"
                android:paddingEnd="30dp"
                android:paddingBottom="15dp"
                android:src="@drawable/ic_facebook" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:text="@string/or_register_with"
            android:textSize="12sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email_id"
            app:boxStrokeColor="@drawable/selector_edit_text"
            app:boxStrokeWidth="1dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@drawable/selector_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/background_color"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/full_name"
            app:boxStrokeColor="@drawable/selector_edit_text"
            app:boxStrokeWidth="1dp"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@drawable/selector_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/background_color"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/mobile_number"
            app:boxStrokeColor="@drawable/selector_edit_text"
            app:boxStrokeWidth="1dp"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@drawable/selector_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/background_color"
                android:inputType="phone"
                android:maxLines="1"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            app:boxStrokeColor="@drawable/selector_edit_text"
            app:boxStrokeWidth="1dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@drawable/selector_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/background_color"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:cornerRadius="14dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_on_quickpay"
                android:textSize="13sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
